# wikimind

./: .gitignore  CLAUDE.md  README.md  cli.py  index.py  ingest.py  lint.py  pyproject.toml  search.py  utils.py
wiki/: _index.md
wiki/concepts/: attention_sinks.md  binding_problem.md  causal_arrow.md  conditional_entropy_barrier.md  directional_asymmetry.md  disambiguation_lag.md  dissipation_scaling.md  epistemic_arrow.md  excess_loss.md  five_arrows_framework.md  kv_cache.md  lora_bottleneck.md  marginal_conditional_phases.md  masked_diffusion_models.md  mutability_arrow.md  narrow_basin_geometry.md  neural_thermodynamics.md  optimization_arrow.md  phase_transition_symmetry_breaking.md  pretraining_prior.md  reversal_curse.md  reversal_invariance.md  three_scaling_laws.md  trace_arrow.md  wind_tunnel_methodology.md  z_shuffle_diagnostic.md
wiki/summaries/: circuit-discovery-latency.md  directional-asymmetry-paper-draft.md  directionality-conditional-complexity-main.md  directionality-training-logs.md  disambiguation-mathematical-formalization.md  dissipation-scaling-thermo.md  first-principles-disambiguation.md  five-arrows-of-time-survey.md  geometric-origin-disambiguation-lag.md  learning-has-an-arrow.md  papadopoulos-arrows-of-time-slides.md
